// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core/auth/components/Login Login renders correctly when logged in 1`] = `null`;

exports[`core/auth/components/Login Login renders correctly when logged out 1`] = `
.glamor-0 {
  background: transparent url(test-file-stub) no-repeat center;
  min-height: 9rem;
  background-size: 100% auto;
  margin: 0 1rem;
}

.glamor-6 {
  max-width: 40rem;
  margin: 0 1rem;
}

.glamor-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.glamor-1 {
  text-align: center;
  padding: 1rem;
}

.glamor-2 {
  padding-bottom: 1rem;
}

.glamor-5 {
  width: 100%;
}

@media (min-width:600px) {
  .glamor-0 {
    background-size: auto;
  }
}

@media (min-width:600px) {
  .glamor-6 {
    margin: 0 auto;
  }
}

<div>
  <div
    className="glamor-0 e1lalxx70"
  />
  <div
    className="MuiPaper-root MuiPaper-elevation1 MuiCard-root glamor-6 egcdk620 MuiPaper-rounded"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiCardContent-root glamor-4 egcdk623"
      >
        <div
          className="glamor-1 egcdk621"
        />
        <div
          className="MuiFormControl-root MuiTextField-root glamor-2 egcdk624"
          onDragStart={[Function]}
          onDrop={[Function]}
        >
          <label
            className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
            data-shrink={false}
            htmlFor="username"
          >
            Username
          </label>
          <div
            className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              autoFocus={true}
              className="MuiInputBase-input MuiInput-input"
              disabled={false}
              id="username"
              name="username"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="MuiFormControl-root MuiTextField-root glamor-2 egcdk624"
          onDragStart={[Function]}
          onDrop={[Function]}
        >
          <label
            className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
            data-shrink={false}
            htmlFor="password"
          >
            Password
          </label>
          <div
            className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiInput-input"
              disabled={false}
              id="password"
              name="password"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="Password"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="MuiCardActions-root MuiCardActions-spacing"
      >
        <button
          className="MuiButtonBase-root MuiButton-root glamor-5 egcdk622 MuiButton-text"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="submit"
        >
          <span
            className="MuiButton-label"
          >
            Login
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`core/auth/components/Login mapStateToProps should return logged in if logged in 1`] = `
Object {
  "loading": false,
  "redirectToReferrer": true,
}
`;

exports[`core/auth/components/Login mapStateToProps should return not logged in if logged out 1`] = `
Object {
  "loading": false,
  "redirectToReferrer": false,
}
`;
